<resources>
    <string name="app_name">DoSoptTemplate</string>
    <string name="logIn_title">Welcome to SOPT</string>
    <string name="logIn_ID">ID</string>
    <string name="logIn_ID_hint">아이디를 입력해주세요</string>
    <string name="logIn_PW">비밀번호</string>
    <string name="logIn_PW_hint">비밀번호를 입력해주세요</string>
    <string name="logIn_button_logIn">로그인하기</string>
    <string name="logIn_button_signUp">회원가입하기</string>
    <string name="signUp_title">SIGN UP</string>
    <string name="signUp_ID">ID</string>
    <string name="signUp_ID_hint">아이디를 입력해주세요</string>
    <string name="signUp_PW">비밀번호</string>
    <string name="signUp_PW_hint">비밀번호를 입력해주세요</string>
    <string name="signUp_nickName">닉네임</string>
    <string name="signUp_nickName_hint">닉네임을 입력해주세요</string>
    <string name="signUp_MBTI">MBTI</string>
    <string name="signUp_MBTI_hint">MBTI를 입력해주세요</string>
    <string name="signUp_bt_signUp">회원가입 하기</string>
    <string name="main_ID">ID</string>
    <string name="main_MBTI">MBTI</string>
    <string name="menu_alternate">DO ANDROID</string>
    <string name="menu_home">홈</string>
    <string name="menu_myPage">마이페이지</string>
    <string name="home_item_original_name">이름 입력</string>
    <string name="home_item_original_msg">상태메시지상태메시지상태메시지상태메시지</string>
    <string name="home_item_orignal_img_des">orignal item img</string>
    <string name="home_item_myProfile_img">myProfile item img</string>
    <string name="home_item_myProfile_name">이름 입력</string>
    <string name="home_item_myProfile_msg">상태메시지상태메시지상태메시지상태메시지</string>
    <string name="home_item_music_img">friend plus music img</string>
    <string name="home_item_music_name">이름 입력</string>
    <string name="home_item_music_msg">상태메시지상태메시지상태메시지상태메시지</string>
    <string name="home_item_music">듣고 있는 음악</string>
    <string name="main_logOut">로그아웃</string>
    <string name="myPage_logOut">로그아웃</string>
    <string name="dialog_logout">LogOut</string>
    <string name="dialog_logout_content">로그아웃 하시겠습니까?</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="menu_follower">follower</string>
    <string name="item_follower_image_description">follower image</string>
</resources>