<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="org.sopt.dosopttemplate.presentation.logIn.LogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.logIn.LogInActivity">

        <TextView
            android:id="@+id/tv_logIn_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logIn_title"
            android:textSize="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_logIn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn_ID"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_logIn_title"
            app:layout_constraintStart_toStartOf="@id/tv_logIn_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_logIn_id"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/primary_1"
            app:boxStrokeErrorColor="@color/error_1"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_logIn_id"
            app:layout_constraintStart_toStartOf="@id/tv_logIn_id"
            app:layout_constraintEnd_toEndOf="@id/tv_logIn_title"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_logIn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logIn_ID_hint"
                android:inputType="text"
                android:text="@={viewModel.username}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_logIn_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logIn_PW"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_logIn_id"
            app:layout_constraintStart_toStartOf="@id/layout_logIn_id" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_logIn_pw"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/primary_1"
            app:boxStrokeErrorColor="@color/error_1"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_logIn_pw"
            app:layout_constraintStart_toStartOf="@id/tv_logIn_pw"
            app:layout_constraintEnd_toEndOf="@id/tv_logIn_title"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_logIn_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logIn_PW_hint"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_logIn_doLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/logIn_button_logIn"
            app:layout_constraintStart_toStartOf="@id/tv_logIn_title"
            app:layout_constraintEnd_toEndOf="@id/tv_logIn_title"
            app:layout_constraintBottom_toTopOf="@id/btn_logIn_doSignUp" />

        <Button
            android:id="@+id/btn_logIn_doSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/logIn_button_signUp"
            app:layout_constraintStart_toStartOf="@id/tv_logIn_title"
            app:layout_constraintEnd_toEndOf="@id/tv_logIn_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>