<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_original"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintDimensionRatio="1"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_item_original"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/main_image"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_item_orignal_img_des" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_item_original_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/cv_item_original"
        app:layout_constraintBottom_toBottomOf="@id/cv_item_original"
        app:layout_constraintStart_toEndOf="@id/cv_item_original"
        tools:text="@string/home_item_original_name"/>

    <TextView
        android:id="@+id/tv_item_original_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/cv_item_original"
        app:layout_constraintBottom_toBottomOf="@id/cv_item_original"
        app:layout_constraintStart_toEndOf="@id/tv_item_original_name"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/home_item_original_msg"/>

</androidx.constraintlayout.widget.ConstraintLayout>