<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="item"
            type="org.sopt.dosopttemplate.data.Profile.FriendBirthday" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item_original"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintDimensionRatio="1"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_item_original"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/main_image"
                android:adjustViewBounds="true"
                android:contentDescription="@string/home_item_orignal_img_des" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_original_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/cv_item_original"
            app:layout_constraintBottom_toBottomOf="@id/cv_item_original"
            app:layout_constraintStart_toEndOf="@id/cv_item_original"
            tools:text="@string/home_item_original_name" />

        <TextView
            android:id="@+id/tv_item_original_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:maxLines="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/cv_item_original"
            app:layout_constraintBottom_toBottomOf="@id/cv_item_original"
            app:layout_constraintStart_toEndOf="@id/tv_item_original_name"
            app:layout_constraintEnd_toStartOf="@id/tv_item_origianl_birthday"
            tools:text="@string/home_item_original_msg" />

        <TextView
            android:id="@+id/tv_item_origianl_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="3dp"
            app:layout_constraintTop_toTopOf="@id/cv_item_original"
            app:layout_constraintBottom_toBottomOf="@id/cv_item_original"
            app:layout_constraintStart_toEndOf="@id/tv_item_original_msg"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_rect_pink_line"
            tools:text="@string/home_item_music"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>