<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_dialog_logout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"
                    android:text="@string/dialog_logout"
                    android:includeFontPadding="false"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_dialog_logout_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="80dp"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:text="@string/dialog_logout_content" />

                <TextView
                    android:id="@+id/tv_dialog_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_confirm"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="50dp" />

                <TextView
                    android:id="@+id/tv_dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_cancel"
                    android:layout_marginTop="150dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="200dp" />


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="109dp"
            android:layout_marginEnd="103dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_android_green_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>