<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="item"
            type="org.sopt.dosopttemplate.data.entity.Profile.MyProfile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item_my_profile"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintDimensionRatio="1"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_item_my_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/main_image"
                android:adjustViewBounds="true"
                android:contentDescription="@string/home_item_myProfile_img" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/cv_item_my_profile"
            app:layout_constraintBottom_toTopOf="@id/tv_item_my_msg"
            app:layout_constraintStart_toEndOf="@id/cv_item_my_profile"
            tools:text="@string/home_item_myProfile_name" />

        <TextView
            android:id="@+id/tv_item_my_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_my_name"
            app:layout_constraintBottom_toBottomOf="@id/cv_item_my_profile"
            app:layout_constraintStart_toEndOf="@id/cv_item_my_profile"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/home_item_myProfile_msg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>